# jada

./: .gitignore  CMakeLists.txt  README.md  knowledge.md
java/: AdaUtility.java
knowledge/: Example.java  OuterClass.java  codegen  semantics.md  syntax.md
legacy/: symtab.hpp
lexer_test_utility/: CMakeLists.txt  test.cpp
src/: ada_codegen.cpp  ada_codegen.hpp  attribute.cpp  attribute.hpp  basic_block.cpp  basic_block.hpp  bits_utility.hpp  class_member.cpp  class_member.hpp  class_member_attribute.hpp  codegen.cpp  codegen.hpp  codegen_enums.hpp  compile_unit.cpp  compile_unit.hpp  constant.cpp  constant.hpp  constant_pool.cpp  constant_pool.hpp  descriptor.cpp  descriptor.hpp  field.cpp  field.hpp  grammar.y  graphviz.cpp  graphviz.hpp  helper.cpp  helper.hpp  inode.hpp  instruction.cpp  instruction.hpp  isemantics_part.cpp  isemantics_part.hpp  jvm_attribute.cpp  jvm_attribute.hpp  jvm_class.cpp  jvm_class.hpp  jvm_code_attribute.cpp  lexer.l  main.cpp  (+18 more)
test/: CMakeLists.txt  cd_test.cpp  parser_test.cpp  run_pgo_test.sh
test_data/: complex.adb  dummy.adb  err.adb  inheritance.adb  io.adb  name_error.adb  nesting.adb  overload.adb  simple.adb  test.adb  test2.adb
test_data/codegen/: array.adb  bool.adb  branch.adb  branch2.adb  call.adb  complex2.adb  feel.adb  fib.adb  fill.adb  in.adb  loop.adb  loop2.adb  oop.adb  out.adb  overload.adb  pack.adb  record.adb  ref.adb  sort.adb  string.adb
test_data/final/: bool.adb  branch.adb  call.adb  multidim.adb  oop.adb  overload.adb  ref.adb  sort.adb  types.adb
test_data/modules/: main.adb  mod.adb
test_data/semantics/: alias_name_error.adb  arr.test  bool.adb  for_linking.adb  inherits_name_conflict.adb  inherits_name_conflict2.adb  inner_package_body_decl.adb  oop1.adb  overload.adb  pack_private.adb  proc_func_overload.adb  record_inherits.adb  return_type.adb  simple_pack.adb  type_replace_check.adb  typecheck.adb
test_data/semantics/circular/: mutal2.adb
test_data/semantics/mutal/: main.adb  mutal1.adb
test_data/semantics/pack_linking/: main.adb  pack.adb  pack.ads
test_data/semantics/pack_linking_oop/: main.adb  pack.adb  pack.ads
test_src/: CMakeLists.txt
test_utility/: CMakeLists.txt  test.cpp
tests/: begin_simple.adb  body_simple.adb  char_error_empty.adb  char_error_invalid_escape.adb  comment_after_code.adb  comment_after_keyword.adb  comment_inside_code.adb  comment_multiline.adb  comment_only.adb  comment_with_empty_lines.adb  cond_and_not.adb  cond_double_not.adb  cond_nested.adb  cond_simple_not.adb  end_simple.adb  float_with_underscores.adb  float_with_zero.adb  for_loop_exit.adb  for_loop_simple.adb  function_simple.adb  if_else.adb  if_elsif.adb  if_simple.adb  integer_binary.adb  integer_decimal.adb  integer_error_hex_leading_underscore.adb  integer_hex.adb  integer_octal.adb  integer_zero.adb  is_simple.adb  logic_and_or.adb  loop_exit.adb  loop_simple.adb  newline_multiple.adb  newline_simple.adb  op_less.adb  op_more.adb  overriding_simple.adb  package_simple.adb  record_simple.adb  (+14 more)
tests/lexer_tests/: char_digit.adb  char_error_multi.adb  char_quote.adb  comment_inside_code.adb  comment_multiline.adb  complex.adb  cond_and_or.adb  cond_mix.adb  cond_or_and.adb  cond_simple_and.adb  cond_simple_or.adb  end_simple.adb  float_error_double_dot.adb  float_error_no_fraction.adb  float_error_only_exp.adb  float_error_trailing_underscore.adb  float_error_underscore.adb  float_exponent.adb  float_negative_exp.adb  for_loop_exit.adb  for_loop_simple.adb  if_else.adb  if_elsif.adb  integer_decimal.adb  integer_error_hex_trailing_underscore.adb  integer_error_leading_underscore.adb  integer_error_trailing_underscore.adb  integer_zero.adb  is_simple.adb  logic_and_not.adb  logic_double_not.adb  logic_nested.adb  logic_not_and.adb  logic_paren_and.adb  logic_paren_or.adb  loop_exit.adb  newline_multiple.adb  op_div.adb  op_error_double_minus.adb  op_error_double_plus.adb  (+14 more)
